--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <link rel="shortcut icon" href="">
 </head>
 <body>
- 
+ テストテストテスト
+ <script src="//raw.githubusercontent.com/wanicap7/wanicap7.github.io/main/panisoku.js"></script>
 <!-- コンテンツを配置 -->
  
 <!-- SCRIPTS -->
